[tool.poetry]
name = "repl_python3_lesson7-matplotlib-HattoriRuna"
version = "0.1.0"
description = ""
authors = ["HattoriRuna <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
